--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,10 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <meta name="description"
+    content="DrugNexusAI - AI-powered drug interaction detection and personalized clinical support platform" />
+  <meta name="theme-color" content="#2A9D8F" />
+  <title>DrugNexusAI - AI-Powered Drug Interaction Platform</title>
 </head>
 
 <body>
